--- a/src/components/TextInput.css
+++ b/src/components/TextInput.css
@@ -2,14 +2,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
+  width: 80%;
+  min-width: 500px;
+  & h1 {
+    font-size: 26px;
+    margin: 0;
+    padding: 4px;
+    align-self: flex-start;
+    border: 1px solid orange;
+    background-color: orange;
+    color: white;
+  }
 }
 .textbox {
-  width: 80%;
-  min-width: 800px;
+  box-sizing: border-box;
+  width: 100%;
   height: auto;
   min-height: 500px;
   font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  outline: 0;
+  border: 1px solid orange;
 }
 .count-box {
   margin: 15px;
