--- a/src/components/questionBox/questionBox.module.css
+++ b/src/components/questionBox/questionBox.module.css
@@ -34,4 +34,13 @@
       font-size: 18px;
     }
   }
+  & .textQuestion {
+    box-sizing: border-box;
+    height: 300px;
+    outline: 0;
+    border: 1px solid orange;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+  }
 }
